<resources>
    <string name="app_name">임산부 케어 락커</string>
    <string name="title_activity_settings">설정</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">일반</string>

    <string name="pref_title_locker">락커 사용</string>
    <string name="pref_description_locker">락커 사용 여부를 지정합니다.</string>

    <string name="pref_title_weather">날씨 표시</string>
    <string name="pref_description_weather">잠금 화면에서 날씨를 보여줍니다.</string>

    <string name="pref_title_calendar">일정 표시</string>
    <string name="pref_description_calendar">잠금 화면에서 한 달 이내의 일정을 보여줍니다.</string>

    <string name="pref_title_fair">베이비페어 표시</string>
    <string name="pref_description_fair">잠금 화면에서 베이비페어 일정을 보여줍니다.</string>

    <string name="pref_title_advice">조언 표시</string>
    <string name="pref_description_advice">잠금 화면에서 임산부를 위한 조언을 보여줍니다.</string>

    <string name="pref_title_music">태교 음악 버튼 표시</string>
    <string name="pref_description_music">잠금 화면에서 태교 음악 재생 버튼을 표시합니다.</string>

    <string name="pref_title_background">잠금 화면 배경 설정</string>

    <string name="pref_title_favorite">즐겨쓰는 앱</string>


    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Profile settings -->
    <string name="pref_header_profile">프로필</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">데이터 &amp; 싱크</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_service_switch">service_switch</string>
    <string name="pref_background_picker">background_picker</string>
    <string name="pref_weather_switch">weather_switch</string>
    <string name="pref_calendar_switch">calendar_switch</string>
    <string name="pref_fair_switch">fair_switch</string>
    <string name="pref_advice_switch">advice_switch</string>
    <string name="pref_music_switch">music_switch</string>
    <string name="pref_favorite_picker">favorite_picker</string>
    <string name="pref_pattern_hash">pattern_hash</string>
    <string name="pref_description_pattern_lock">패턴 비밀번호 사용 여부를 지정합니다.</string>
    <string name="pref_title_pattern_lock">패턴 잠금 설정</string>

    <string name="pref_title_profile_name">사용자 이름</string>
    <string name="pref_title_profile_birth">생년월일</string>
    <string name="pref_title_profile_record">의료 기록</string>
    <string name="pref_title_profile_allergy">알레르기 및 약물 부작용</string>
    <string name="pref_title_profile_medicine">복용 중 약물</string>
    <string name="pref_title_profile_com_contact">가족 연락처</string>
    <string name="pref_title_profile_hpt_contact">병원 연락처</string>
    <string name="pref_title_profile_etc_contact">기타 연락처</string>
    <string name="pref_title_profile_blood">혈액형</string>
    <string name="pref_pair_uid">pair_uid</string>
    <string name="pref_title_profile_pregnancy_date">임신 일자</string>
</resources>
